--- a/assets/css/my_style.css
+++ b/assets/css/my_style.css
@@ -19,3 +19,8 @@ body::before {
   position: relative;
   padding: 16px 13px;
 }
+@media (max-width: 400px) {
+  .cba-logo {
+    width: 316px;
+  }
+}
