--- a/assets/css/my_style.css
+++ b/assets/css/my_style.css
@@ -1,3 +1,4 @@
+/*Pseudo-element selector*/
 body::before {
   content: "";
   position: fixed;
@@ -10,17 +11,20 @@ body::before {
   height: 100vh;
   z-index: -1;
 }
+/*Class  selector*/
 .navbar-nav>li>a {
   font-size: 20px;
   padding-top: 20px;
 }
-
 .navbar-toggle {
   position: relative;
   padding: 16px 13px;
 }
+/*Responsive*/
 @media (max-width: 450px) {
   .cba-logo {
     width: 316px;
   }
 }
+/*Pseudo-class selector*/
+/*Id selector*/
