--- a/assets/css/my_style.css
+++ b/assets/css/my_style.css
@@ -39,4 +39,25 @@ img[alt="logo"] {
   padding-left: 40%;
   padding-top: 40%;
 }
+#pass_forget {
+  position: relative;
+  left: 190px;
+}
+#submitComment {
+    margin-top: 15px;
+}
+.commentBox {
+    margin: auto;
+}
 
+#commentDisplay {
+    background: #f0f0f0;
+    padding: 10px;
+    margin-bottom: 10px;
+    height: 200px;
+    overflow-y: scroll;
+}
+
+#commentInput {
+    height: 100px;
+}
