--- a/assets/css/my_style.css
+++ b/assets/css/my_style.css
@@ -27,7 +27,7 @@ img[alt="logo"] {
 }
 /*Id selector*/
 #background_section {
-  background: lightblue url("/assets/img/bg_w.jpg") no-repeat fixed center 2%;
+  background: whitesmoke url("/assets/img/bg_w.jpg") no-repeat fixed center;
   background-size: cover;
   height: 100vh; /* 100% of viewport height */
   margin: 0 auto;
