--- a/assets/css/runes.css
+++ b/assets/css/runes.css
@@ -35,3 +35,23 @@ html {
   background-color: black; /* Измените на нужный вам цвет подсветки */
   transition: background-color 3s ease; /* Измените значение 0.5s на желаемую продолжительность перехода */
 }
+.hover-rune {
+  --b: 0.1em;   /* the thickness of the line */
+  --c: #1095c1; /* the color */
+
+  color: #0000;
+  padding-block: var(--b);
+  background:
+    linear-gradient(var(--c) 50%,#000 0) 0% calc(100% - var(--_p,0%))/100% 200%,
+    linear-gradient(var(--c) 0 0) 0% var(--_p,0%)/var(--_p,0%) var(--b) no-repeat;
+  -webkit-background-clip: text,padding-box;
+          background-clip: text,padding-box;
+  transition: .3s var(--_s,0s) linear,background-size .3s calc(.3s - var(--_s,0s));
+}
+.imagemap {position: relative;}
+.imagemap img {display: block;}
+.imagemap .area {display: block; position: absolute; transition: box-shadow 0.15s ease-in-out;}
+.imagemap .area:hover {box-shadow: 0px 0px 1vw rgba(0,0,0,0.5);}
+.runic_letters {
+  width: 500px;
+}
