--- a/assets/css/my_style.css
+++ b/assets/css/my_style.css
@@ -27,7 +27,7 @@ img[alt="logo"] {
 }
 /*Id selector*/
 #background_section {
-  background: url("assets/img/bg_w.jpg") no-repeat fixed center;
+  background: url("/assets/img/bg_w.jpg") no-repeat fixed center;
   background-size: cover;
   height: 100vh; /* 100% of viewport height */
   margin: 0 auto;
@@ -60,4 +60,14 @@ img[alt="logo"] {
 
 #commentInput {
     height: 100px;
+}
+#btn-back-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none;
+    padding: 12px 12px;
+    font-size: 30px;
+    line-height: 0;
+    border-radius: 32px;
 }
