--- a/assets/css/my_style.css
+++ b/assets/css/my_style.css
@@ -4,6 +4,12 @@ Check out "bootstrap.css" for the following requirements:
 - Pseudo-class selector (line 48-49)
 - Box Model (.container, all col- types)
 */
+.navbar {
+    margin-bottom: 0px;
+}
+.featurette-heading {
+    margin-top: 10px;
+}
 /*Combinators*/
 .navbar-nav>li>a {
   font-size: 20px;
@@ -29,9 +35,11 @@ img[alt="logo"] {
 #background_section {
   background: url("/assets/img/bg_w.jpg") no-repeat fixed center;
   background-size: cover;
-  height: 100vh; /* 100% of viewport height */
+  height: 80vh; /* 100% of viewport height */
   margin: 0 auto;
   position: relative;
+  padding-top: 35px;
+  padding-bottom: 35px;
 }
 .or-sep {
   font-size: 20px;
